# Groupe_C_Scrabble

./: Bienvenue.c  Bienvenue.h  CMakeLists.txt  Creation du mot.c  Creation du mot.h  README.md  Regle.c  Regle.h  TableauDeJeu.c  TableauDeJeu.h  Verification_chevalet.c  Verification_chevalet.h  joueurScore.c  joueurScore.h  joueur_initializer.c  joueur_initializer.h  laPioche.c  laPioche.h  main.c  pickJetons.c  pickJetons.h  sauvegarde.c  sauvegarde.h
